fix: fixes bug where restaurant card displays websites that do not have a website. This commit removes bug where websites with no websites are displaying wesbites

--- a/src/components/Restaurants/RestaurantCard.module.css
+++ b/src/components/Restaurants/RestaurantCard.module.css
@@ -1,17 +1,12 @@
 .restaurant-card {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin: 10px;
-    background-color: #f9f9f9;
-    border-radius: 5px;
-}
-
-.restaurant-card h3 {
-    margin: 0;
-    font-size: 1.2rem;
-}
-
-.restaurant-card p {
-    margin: 0;
-    font-size: 1rem;
+    background-color: rgba(
+        18,
+        116,
+        214,
+        0.5
+    ); /* Adjust the alpha value (0.7) to control transparency */
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
 }
