--- a/src/components/Restaurants/RestaurantCard.module.css
+++ b/src/components/Restaurants/RestaurantCard.module.css
@@ -1,12 +1,14 @@
 .restaurant-card {
     background-color: rgba(
-        18,
-        116,
-        214,
+        64,
+        152,
+        240,
         0.5
     ); /* Adjust the alpha value (0.7) to control transparency */
     color: white;
-    font-size: 20px;
+    font-size: 10px;
     padding: 20px;
     text-align: center;
+    max-width: 320px;
+    word-wrap: break-word;
 }
