--- a/src/components/premium/FormStyles.module.css
+++ b/src/components/premium/FormStyles.module.css
@@ -30,7 +30,7 @@
     padding: 11px 15px 11px 0;
 }
 
-button {
+.PayButton {
     display: block;
     font-size: 16px;
     width: calc(100% - 30px);
@@ -50,7 +50,7 @@ button {
     border: none;
 }
 
-button:active {
+.PayButton:active {
     background-color: #d782d9;
     box-shadow:
         0 6px 9px rgba(50, 50, 93, 0.06),
@@ -63,9 +63,4 @@ button:active {
     margin-left: 25%;
     margin-top: 5%;
     margin-right: 25%;
-}
-
-h1,
-h3 {
-    text-align: center;
 }
