--- a/src/components/directMessage/component/WarningModal.module.css
+++ b/src/components/directMessage/component/WarningModal.module.css
@@ -1,4 +1,4 @@
-.warning-modal {
+.warningModal {
     position: fixed;
     top: 0;
     left: 0;
@@ -11,7 +11,7 @@
     z-index: 100;
   }
   
-  .warning-content {
+  .warningContent {
     background: #fff;
     border-radius: 5px;
     padding: 20px;
